--- a/api/api/src/main/resources/application.properties
+++ b/api/api/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=120000
+spring.flyway.enabled=false
 
 
