--- a/api/api/pom.xml
+++ b/api/api/pom.xml
@@ -6,8 +6,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.3</version> <!-- Troque para uma versão estável -->
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.1.3</version>
+		<relativePath/>
 	</parent>
 
 
@@ -68,6 +68,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
