--- a/api/api/src/main/resources/application.properties
+++ b/api/api/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=120000
 spring.flyway.enabled=false
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
