--- a/api/api/src/main/resources/application.properties
+++ b/api/api/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.flyway.enabled=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-stacktrace=never
