--- a/api/api/src/main/resources/application.properties
+++ b/api/api/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
+
+api.secutiry.token.secret=${JWT_SECRET:12345678}
