Build do Projeto

--- a/api/api/src/main/resources/application-test.properties
+++ b/api/api/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-# Configurações para o H2 em ambiente de teste
+# Configuracoes para o H2 em ambiente de teste
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,7 +6,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# Outras configurações específicas para os testes
+# Outras configuracoes especificas para os testes
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
